--- a/public/index.html
+++ b/public/index.html
@@ -6,26 +6,17 @@
   <link rel="icon" href="%PUBLIC_URL%/mainlogo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#195290" />
-
-  <meta name="description" content="This app is Developed by AVRS" />
+  <meta name="description" content="This app is Developed by Zaryab" />
 
   <link rel="apple-touch-icon" href="mainlogo.png" />
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-  <!-- For boostrap icons
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
   <script src='https://cdn.rawgit.com/naptha/tesseract.js/1.0.10/dist/tesseract.js'></script>
   <title>File Conversion Utility - Zaryab</title>
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <!-- For image to text -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
@@ -46,7 +37,6 @@
       bottom: 1px;
     }
   </style>
-
 </head>
 
 <body onoffline='offline()' ononline='online()'>
@@ -56,9 +46,9 @@
 
   <!--Check the internet connections-->
   <script>
-
     function offline() {
-      document.getElementById('internetstatus').innerHTML = "<center>Check Your Internet Connection <br> only Image Compressor & Image To Text Works offline</center>";
+      document.getElementById('internetstatus').innerHTML =
+        "<center>Check Your Internet Connection <br> only Image Compressor & Image To Text Works offline</center>";
       document.getElementById('internetstatus').style = "display:block";
     }
 
@@ -72,7 +62,6 @@
 
   <div id='internetstatus'></div>
   <!--End Check the internet connections-->
-
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
